Trying to add script

--- a/templates/children.html
+++ b/templates/children.html
@@ -2,7 +2,8 @@
 {% block content %}
 
     {% if current_user.is_authenticated %}
-        <form class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2">
+
+        <form id="addform" name="formtoadd" class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2">
 
             <div class="uk-margin">
                 <label class="uk-form-label uk-text-center" for="form-stacked-text">Уровень мероприятия</label>
@@ -36,21 +37,31 @@
                     <input class="uk-input" id="form-stacked-text" type="text" placeholder="Дата проведения">
 
                 </div>
-            <div class="uk-grid uk-margin-large-bottom">
-                {% for _ in range(15) %}
-                        <div class="uk-width-1-2@s">
-                            <input class="uk-input" type="text" placeholder="ФИО участника">
-                        </div>
-                        <div class="uk-width-1-4@s">
-                            <input class="uk-input" type="text" placeholder="Место">
-                        </div>
+                <div class="uk-grid uk-margin-large-bottom">
+                    <div class="uk-width-2-3@s">
+                        <input class="uk-input" type="text" placeholder="ФИО участника">
+                    </div>
+                    <div class="uk-width-1-3@s">
+                        <input class="uk-input" type="text" placeholder="Место">
+                    </div>
 
-                {% endfor %}
-            </div>
+                </div>
+                <button class="uk-button uk-button-default uk-width-2-3" onclick="newInput()">Добавить участника</button>
                 <button class="uk-button uk-button-default uk-width-1-1">Отправить</button>
 
             </div>
         </form>
+        <script language="JavaScript">
+            function newInput() {
+                var formtoadd = document.getElementById('addform');
+                var newinput = document.createElement('input');
+                newinput.type = "text";
+                newinput.class = "uk-input";
+                newinput.name = "new";
+                formtoadd.appendChild(newinput);
+            }
+        </script>
+
     {% else %}
         <div class="uk-margin uk-overlay uk-overlay-default">
             <h1>Необходима <a href="/login">авторизация</a></h1>
