--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,13 @@
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
                         <li class="uk-active"><a href="/">Главная</a></li>
-                        <li><a href="/add_children">Добавить детей</a></li>
                         <li>
                             {% if current_user.is_authenticated %}
                             <a href="">{{ current_user.name }} {{ current_user.surname }}</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    <li><a href="/account">Мой кабинет</a></li>
                                     <li><a href="/logout">Выход</a></li>
-
                                 </ul>
                             </div>
                             {% else %}
