--- a/templates/children.html
+++ b/templates/children.html
@@ -1,71 +1,41 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    {% if current_user.is_authenticated %}
-
+    {% if added %}
         <form id="addform" name="formtoadd" class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2">
 
             <div class="uk-margin">
                 <label class="uk-form-label uk-text-center" for="form-stacked-text">Уровень мероприятия</label>
-                <select class="uk-select uk-margin-small-bottom">
-                    <option>Международный</option>
-                    <option>Федеральный</option>
-                    <option>Региональный</option>
-                    <option>Муниципальный</option>
-                    <option>Институциональный</option>
-                </select>
+                    {{ form.level(class="uk-select uk-margin-small-bottom") }}
                 <div class="uk-form-controls uk-margin-small-bottom">
-                    <input class="uk-input" id="form-stacked-text" type="text" placeholder="Номинация">
+                    {{ form.nomination(class="uk-input", type="text", placeholder="Номинация") }}
                 </div>
                 <label class="uk-form-label uk-text-center" for="form-stacked-text">Дистанционный</label>
-                <select class="uk-select uk-margin-small-bottom">
-                    <option>Да</option>
-                    <option>Нет</option>
-                </select>
+                    {{ form.distant(class="uk-select uk-margin-small-bottom") }}
                 <div class="uk-form-controls uk-margin-small-bottom">
-                    <input class="uk-input" id="form-stacked-text" type="text" placeholder="Объединение">
+                    {{ form.union(class="uk-input", type="text", placeholder="Объединение") }}
                 </div>
                 <label class="uk-form-label uk-text-center" for="form-stacked-text">Коллектив</label>
-                <select class="uk-select uk-margin-small-bottom">
-                    <option>Да</option>
-                    <option>Нет</option>
-                </select>
+                    {{ form.collective(class="uk-select uk-margin-small-bottom") }}
                 <div class="uk-form-controls uk-margin-small-bottom">
-                    <input class="uk-input" id="form-stacked-text" type="text" placeholder="Место проведения">
+                    {{ form.place(class="uk-input", type="text", placeholder="Место проведения") }}
                 </div>
                 <div class="uk-form-controls uk-margin-large-bottom">
-                    <input class="uk-input" id="form-stacked-text" type="text" placeholder="Дата проведения">
-
+                    {{ form.date(class="uk-input", type="text", placeholder="Дата проведения (Пример: 20.12.2022)") }}
                 </div>
                 <div class="uk-grid uk-margin-large-bottom">
                     <div class="uk-width-2-3@s">
-                        <input class="uk-input" type="text" placeholder="ФИО участника">
+                        {{ form.fio1(class="uk-input", type="text", placeholder="ФИО участника") }}
                     </div>
                     <div class="uk-width-1-3@s">
-                        <input class="uk-input" type="text" placeholder="Место">
+                        {{ form.position1(class="uk-input", type="text", placeholder="Место") }}
                     </div>
 
                 </div>
-                <button class="uk-button uk-button-default uk-width-2-3" onclick="newInput()">Добавить участника</button>
-                <button class="uk-button uk-button-default uk-width-1-1">Отправить</button>
-
+                {{ form.add_children(class="uk-button uk-button-default uk-width-1-1 uk-margin") }}
+                {{ form.send(class="uk-button uk-button-primary uk-width-1-1") }}
             </div>
         </form>
-        <script language="JavaScript">
-            function newInput() {
-                var formtoadd = document.getElementById('addform');
-                var newinput = document.createElement('input');
-                newinput.type = "text";
-                newinput.class = "uk-input";
-                newinput.name = "new";
-                formtoadd.appendChild(newinput);
-            }
-        </script>
-
     {% else %}
-        <div class="uk-margin uk-overlay uk-overlay-default">
-            <h1>Необходима <a href="/login">авторизация</a></h1>
-        </div>
-    {% endif %}
 
+    {% endif %}
 {% endblock %}
