--- a/templates/children.html
+++ b/templates/children.html
@@ -1,35 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var maxField = 15; //Input fields increment limitation
-            var addButton = $('.add_button'); //Add button selector
-            var wrapper = $('.wrapper'); //Input field wrapper
-            var fieldHTML = '<div class="uk-width-2-3@s"> <input class="uk-input" type="text" placeholder="ФИО участника"> </div><div class="uk-width-1-3@s"><input class="uk-input" type="text" placeholder="Место"> </div>'; //New input field html
-            var x = 1; //Initial field counter is 1
-
-            //Once add button is clicked
-            $(addButton).click(function () {
-                //Check maximum number of input fields
-                if (x < maxField) {
-                    x++; //Increment field counter
-                    $(wrapper).append(fieldHTML); //Add field html
-                }
-            });
-
-            var statusObj={"desc":item, "status":status};
-          $.ajax({
-                    url:"/robot/api/"+item,
-                    type: "POST",
-                    contentType:"applicaton/json",
-                    dataType:"json",
-                    data: JSON.stringify(statusObj)
-          });
-        });
-    </script>
-    <form id="addform" name="formtoadd" class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2">
-
+    <form class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2" method=post>
+    {{ form.csrf_token }}
+    {{ form.name }}
         <div class="uk-margin">
             <label class="uk-form-label uk-text-center" for="form-stacked-text">Уровень мероприятия</label>
             {{ form.level(class="uk-select uk-margin-small-bottom") }}
@@ -56,9 +30,92 @@
                 <div class="uk-width-1-3@s">
                     {{ form.position1(class="uk-input", type="text", placeholder="Место") }}
                 </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio2(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position2(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio3(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position3(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio4(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position4(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio5(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position5(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio6(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position6(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio7(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position7(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio8(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position8(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio9(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position9(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio10(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position10(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio11(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position11(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio12(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position12(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio13(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position13(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio14(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position14(class="uk-input", type="text", placeholder="Место") }}
+                </div>
+                <div class="uk-width-2-3@s">
+                    {{ form.fio15(class="uk-input", type="text", placeholder="ФИО участника") }}
+                </div>
+                <div class="uk-width-1-3@s">
+                    {{ form.position15(class="uk-input", type="text", placeholder="Место") }}
+                </div>
             </div>
-            <a href="javascript:void(0);" class="add_button uk-button uk-button-default uk-width-1-1 uk-margin" title="Add field">Добавить участника</a>
-            {{ form.send(class="uk-button uk-button-primary uk-width-1-1") }}
+            {{ form.send(class="uk-button uk-button-primary uk-width-1-1", type="submit") }}
         </div>
     </form>
 
