--- a/templates/children.html
+++ b/templates/children.html
@@ -18,14 +18,6 @@
                 }
             });
 
-            var statusObj={"desc":item, "status":status};
-          $.ajax({
-                    url:"/robot/api/"+item,
-                    type: "POST",
-                    contentType:"applicaton/json",
-                    dataType:"json",
-                    data: JSON.stringify(statusObj)
-          });
         });
     </script>
     <form id="addform" name="formtoadd" class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2">
@@ -51,10 +43,10 @@
             </div>
             <div class="uk-grid uk-margin-large-bottom wrapper">
                 <div class="uk-width-2-3@s">
-                    {{ form.fio1(class="uk-input", type="text", placeholder="ФИО участника") }}
+                    {{ form.children(class="uk-input", type="text", placeholder="ФИО участника") }}
                 </div>
                 <div class="uk-width-1-3@s">
-                    {{ form.position1(class="uk-input", type="text", placeholder="Место") }}
+                    {{ form.children(class="uk-input", type="text", placeholder="Место") }}
                 </div>
             </div>
             <a href="javascript:void(0);" class="add_button uk-button uk-button-default uk-width-1-1 uk-margin" title="Add field">Добавить участника</a>
