--- a/templates/children.html
+++ b/templates/children.html
@@ -6,7 +6,7 @@
             var maxField = 15; //Input fields increment limitation
             var addButton = $('.add_button'); //Add button selector
             var wrapper = $('.wrapper'); //Input field wrapper
-            var fieldHTML = '<div class="uk-width-2-3@s"> <input class="uk-input" type="text" placeholder="ФИО участника"> </div><div class="uk-width-1-3@s"><input class="uk-input" type="text" placeholder="Место"> </div>'; //New input field html
+            var fieldHTML = '{% for subform in form.participants %} <div class="uk-width-2-3@s"> {{ subform.fio(class="uk-input", type="text", placeholder="ФИО участника") }} </div> <div class="uk-width-1-3@s"> {{ subform.position(class="uk-input", type="text", placeholder="Место") }}</div>{% endfor %} </div>'; //New input field html
             var x = 1; //Initial field counter is 1
 
             //Once add button is clicked
@@ -18,18 +18,10 @@
                 }
             });
 
-            var statusObj={"desc":item, "status":status};
-          $.ajax({
-                    url:"/robot/api/"+item,
-                    type: "POST",
-                    contentType:"applicaton/json",
-                    dataType:"json",
-                    data: JSON.stringify(statusObj)
-          });
         });
     </script>
-    <form id="addform" name="formtoadd" class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2">
-
+    <form class="uk-form-stacked uk-overlay uk-overlay-default uk-width-1-2" method=post>
+        {{ form.csrf_token }}
         <div class="uk-margin">
             <label class="uk-form-label uk-text-center" for="form-stacked-text">Уровень мероприятия</label>
             {{ form.level(class="uk-select uk-margin-small-bottom") }}
@@ -49,16 +41,12 @@
             <div class="uk-form-controls uk-margin-large-bottom">
                 {{ form.date(class="uk-input", type="text", placeholder="Дата проведения (Пример: 20.12.2022)") }}
             </div>
+
             <div class="uk-grid uk-margin-large-bottom wrapper">
-                <div class="uk-width-2-3@s">
-                    {{ form.fio1(class="uk-input", type="text", placeholder="ФИО участника") }}
-                </div>
-                <div class="uk-width-1-3@s">
-                    {{ form.position1(class="uk-input", type="text", placeholder="Место") }}
-                </div>
             </div>
-            <a href="javascript:void(0);" class="add_button uk-button uk-button-default uk-width-1-1 uk-margin" title="Add field">Добавить участника</a>
-            {{ form.send(class="uk-button uk-button-primary uk-width-1-1") }}
+
+            <a class="add_button uk-button uk-button-default uk-width-1-1">Добавить участника</a>
+            {{ form.send(class="uk-button uk-button-primary uk-width-1-1", type="submit") }}
         </div>
     </form>
 
