--- a/templates/methodist_account.html
+++ b/templates/methodist_account.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <p class="uk-text-large">Аккаунт методиста</p>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.5/css/uikit.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.5/css/components/datepicker.css">
+
+
+    <form class="uk-form">
+        <input type="text" data-uk-datepicker="">
+    </form>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.5/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.5/js/components/datepicker.js"></script>
 
 {% endblock %}
