--- a/templates/methodist_account.html
+++ b/templates/methodist_account.html
@@ -13,8 +13,8 @@
     i18n: {
             months:['Январь','Февраль','Март','Апрель','Май','Июнь','Июль','Август','Сентябрь','Октябрь','Ноябрь','Декабрь'],
             weekdays: ['Вс','Пн','Вт','Ср','Чт','Пт','Сб']
-            },
-     minDate: true}">
+            }
+     ">
             <span class="uk-label">Конец периода</span>
             <input id="finish-date" name="finish-date" type="text" data-uk-datepicker="{
     weekstart:1,
@@ -23,15 +23,15 @@
             months:['Январь','Февраль','Март','Апрель','Май','Июнь','Июль','Август','Сентябрь','Октябрь','Ноябрь','Декабрь'],
             weekdays: ['Вс','Пн','Вт','Ср','Чт','Пт','Сб']
             },
-     minDate: true}">
+     ">
 
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
                     {% for teacher in teachers %}
-                        <label><input class="uk-checkbox" name="teachers" type="checkbox"> {{ teacher }} </label>
+                        <label><input value="{{ teacher }}" class="uk-checkbox" name="teachers" type="checkbox"> {{ teacher }} </label>
                     {% endfor %}
                 </div>
 
-            <input class="uk-button uk-button-primary uk-width-1-1" type="button" name="submit" id="submit"
+            <input class="uk-button uk-button-primary uk-width-1-1" type="submit" name="submit" id="submit"
                    value="Сформировать">
         </form>
     </div>
