create xls and download

--- a/templates/children.html
+++ b/templates/children.html
@@ -34,8 +34,11 @@
         <div class="uk-margin">
             <label class="uk-form-label uk-text-center" for="form-stacked-text">Уровень мероприятия</label>
             <select class="uk-select uk-margin-small-bottom" name="level">
-                <option>Да</option>
-                <option>Нет</option>
+                <option>Международный</option>
+                <option>Федеральный</option>
+                <option>Региональный</option>
+                <option>Муниципальный</option>
+                <option>Институциональный</option>
             </select>
             <div class="uk-form-controls uk-margin-small-bottom">
                 <input class="uk-input" type="text" placeholder="Номинация" name="nomination">
