--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -38,11 +38,14 @@
                     </table>
 
                 </div>
-                <div class="uk-card-footer">
-                    <a href="/download/{{ contest }}" class="uk-button uk-button-text">Сформировать</a>
-                </div>
             </div>
         {% endfor %}
+        <div class="uk-card-footer">
+            <a href="/download/{{ teachers[teacher] }}" class="uk-button uk-button-text">Сформировать по педагогу</a>
+        </div>
     {% endfor %}
+<div class="uk-card-footer">
+    <a href="/download/{{ teachers }}" class="uk-button uk-button-text">Сформировать по всем</a>
+</div>
 </div>
 {% endblock %}
