--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -45,7 +45,7 @@
         </div>
     {% endfor %}
 <div class="uk-card-footer">
-    <a href="/download/{{ teachers }}" class="uk-button uk-button-text">Сформировать по всем</a>
+    <a href="/download/all/{{ teachers }}" class="uk-button uk-button-text">Сформировать по всем</a>
 </div>
 </div>
 {% endblock %}
